--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -57,39 +57,15 @@
 
 \section{Employment}
 
-Principal Researcher at Certora Inc., April 2023 - present \\
+Director of US R\&D, Certora Inc., December 2023 - present \\
 Affiliate Assistant Professor, UW, Seattle, January 2023 - present \\
 
+Principal Researcher at Certora Inc., April 2023 - November 2023 \\
 Formal Verification Team Lead at Certora Inc., June 2022 - March 2023 \\
 Senior Researcher at Certora Inc., September 2021 - May 2022 \\
 Website: \url{https://cnandi.com/} \\
 
-\section{Education}
-
-PhD in Computer Science, Fall 2015 - Summer 2021 \\
-Paul G. Allen School of Computer Science \& Engineering, UW \\
-Thesis topic: Programming Language Techniques for Computational Fabrication \\
-Advisors: Zachary Tatlock, Dan Grossman\\
-\textbf{Adobe Research Fellow, 2019} \\
-%\textbf{Work funded by NSF grant awards: 1813166, 174957} \\
-
-{\sl Master of Science,} Computer Science, June 2018 \\
-Paul G. Allen School of Computer Science \& Engineering, UW \\
-Advisors: Zachary Tatlock, Dan Grossman
-
-{\sl Master of Science,} Computer Science, August 2014 \\
-\'{E}cole Polytechnique F\'{e}d\'{e}rale de Lausanne(EPFL), Switzerland \\
-Thesis: Contracts for Real-Time, Safety Critical Systems \\Supervisors: Prof.Viktor Kuncak, Dr.Manuel Oriol\\
-\textbf{M.Sc Research Scholars Program and Swiss Government Fellow}
-
-{\sl Bachelor of Science,} Statistics, Mathematics and Computer Science, June 2012 \\
-Banaras Hindu University (BHU), Varanasi, India \\
-Concentration: Statistics \\
-Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh\\
-\textbf{University Gold Medalist for graduating with highest GPA}
-
 \section{Publications}
-\subsection{Drafts and under submission papers}
 %There are 4 top international conferences in the area of programming languages:
 %POPL, PLDI, OOPSLA, ICFP.
 %Paper acceptance is highly selective, and
@@ -98,19 +74,21 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 %  the proceedings of both are published in the ACM TOG (Transaction on Graphics).
 %UIST is one of the top venues for Human Computer Interaction, and
 %ARITH is a top tier venue for computer numerics. \\
+\subsection{Drafts and under submission papers}
 \begin{enumerate}
-  \item Enzo Nicourt, \textbf{Chandrakana Nandi}, Ylies Falcone. \\
-    Towards Mutation-guided Test Suites for Smart Contracts.
 
-  \item Yihong Zhang, Anjali Pal, Adriana Schulz, Zachary Tatlock, \textbf{Chandrakana Nandi}. \\
+  \item Yihong Zhang, Anjali Pal, Adriana Schulz, Zachary Tatlock, \textbf{Chandrakana Nandi}.
     Using Anti-Unification to Scale Parametric CAD Decompilation.
 
-  \item John Toman, Shelly Grossman, Alexander Bakst, Mooly Sagiv, \textbf{Chandrakana Nandi}. \\
+  \item John Toman, Shelly Grossman, Alexander Bakst, Mooly Sagiv, \textbf{Chandrakana Nandi}.
     Pointer Analysis Guided Verification of Ethereum Bytecode.
 \end{enumerate}
 
-\subsection{Peer reviewed conference and workshop papers}
+\subsection{Peer reviewed conference papers}
 \begin{enumerate}
+
+  \item Enzo Nicourt, Ben Kushigian, \textbf{Chandrakana Nandi}, Ylies Falcone. \\
+    Towards Mutation-guided Test Suites for Smart Contracts, ICST (Industry Track), 2024.
 
   \item Anjali Pal, Brett Saiki, Cynthia Richey, Amy Zhu, Ryan Tjoa, Oliver Flatt, Max Willsey, Zachary Tatlock, \textbf{Chandrakana Nandi}. \\
     Equality Saturation Theory Exploration à la Carte, OOPSLA 2023.
@@ -148,13 +126,20 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
   \item \textbf{Chandrakana Nandi}, Anat Caspi, Dan Grossman, Zachary Tatlock. \\
     Programming Language Tools and Techniques for 3D Printing. SNAPL 2017.
 
-  \item \textbf{Chandrakana Nandi}, Dan Grossman, Adrian Sampson, Todd Mytkowicz, Kathryn S. McKinley. \\ Debugging Probabilistic Programs. MAPL 2017.
-  \item \textbf{Chandrakana Nandi}, Dan Grossman, Adrian Sampson, Todd Mytkowicz, Kathryn S. McKinley. \\ Debugging Probabilistic Programs. PPS 2017.
+\item \textbf{Chandrakana Nandi}, Aurelien Monot, Manuel Oriol: Stochastic Contracts for Runtime Checking of Component-based Real-time Systems. CBSE'15: 18th International ACM SIGSOFT Symposium on Component-Based Software Engineering.
+\end{enumerate}
+
+
+\subsection{Workshop and other peer-reviewed papers}
+
+\begin{enumerate}
+\item \textbf{Chandrakana Nandi}, Dan Grossman, Adrian Sampson, Todd Mytkowicz, Kathryn S. McKinley. \\ Debugging Probabilistic Programs. MAPL 2017.
+\item \textbf{Chandrakana Nandi}, Dan Grossman, Adrian Sampson, Todd Mytkowicz, Kathryn S. McKinley. \\ Debugging Probabilistic Programs. PPS 2017.
 \item \textbf{Chandrakana Nandi}, Michael D. Ernst. \\ Automatic Trigger Generation for Rule-based Smart Homes. ACM SIGPLAN PLAS 2016.
 \item \textbf{Chandrakana Nandi}. Automatic Trigger Generation for End User Written Rules for Home Automation. ACM FSE SRC 2016.
 \item \textbf{Chandrakana Nandi}. Correctness and Security for Home Automation. POPL SRC 2016.
-\item \textbf{Chandrakana Nandi}, Aurelien Monot, Manuel Oriol: Stochastic Contracts for Runtime Checking of Component-based Real-time Systems. CBSE'15: 18th International ACM SIGSOFT Symposium on Component-Based Software Engineering.
 \end{enumerate}
+
 \subsection{Theses}
 \begin{enumerate}
 \item C. Nandi: Programming Language Tools and Techniques for Computational Fabrication. {PhD Thesis}, UW, August 2021
@@ -209,6 +194,9 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 
 \subsection{Other service}
 \begin{enumerate}[itemsep=-2pt]
+\item EGRAPHS Advisory Committee, 2023-
+\item Board member, Secure Staking Alliance, 2023-
+\item PLMW Career Panel, OOPSLA 2023
 \item {Panelist, Formal Verification and Security panel, ETH Denver 2023}
 \item SIGPLAN-M mentor, 2022 - current
 \item Session Chair at PLDI 2022 and SIGPLAN tracks
@@ -261,6 +249,11 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 
 \section{Talks}
  \begin{itemize}[itemsep=.7pt]
+ \item{\sl Mutation Testing for Formal Verification}, Invited Speaker, Adobe PL Seminar, December 2023
+ \item{\sl Mutation Testing for Formal Specifications}, Solidity Summit, Devconnect 2023
+ \item{\sl Proactive Security}, TrustX, Devconnect 2023
+ \item{\sl Beyond Testing: The Power of Proof}, TrustX, Devconnect 2023
+ \item{\sl Formally Verifying Vyper Programs}, Cyfrin Audits Live on Youtube, September 2023
  \item{\sl Formal Verification Using the Certora Prover}, Invited Speaker, CMU Secure Blockchain summit, May 2023
  \item{\sl Using Mutation Testing to Write Better Formal Specs}, ETH Denver, March 2023
  \item{\sl Formally verifying what you execute} DeFi FV in Practice, Denver, March 2023
@@ -295,6 +288,7 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 
 \section{Media Coverage}
 \begin{itemize}
+  \item Smart Contract Security, Interviewed by Cyfrin Audits, November 2023
   \item Featured in the ICFP 2021 trailer
   \item Invited SIGPLAN Article on Fast and Extensible Equality Saturation, April 2021
   \item Co-author of a SIGPLAN blog on Conferences after COVID: An Early-Career Perspective, March 2021
@@ -309,6 +303,11 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 
 \section{Research Mentorship}
 \begin{enumerate}
+  \item William Wang, intern at Certora (Jan - March 2024)
+  \item Anjali Pal, UW PhD Student
+  \item Amy Zhu, UW PhD Student
+  \item Thia Richey, UW BS/MS
+  \item Brett Saiki, UW BS/MS
   \item Ben Kushigian, intern at Certora (March - Sept 2023)
   \item Thia Richey, intern at Certora (June - Sept 2023)
   \item Oliver Flatt, intern at Certora (Jan - Aug 2022)
@@ -317,9 +316,6 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
      \begin{itemize}
        \item $2^{nd}$ place, ACM-SPLASH SRC (undergraduate category), 2022
      \end{itemize}
-  \item Amy Zhu, UW PhD Student
-  \item Anjali Pal, UW PhD Student
-  \item Brett Saiki, UW BS/MS
   \item Anagha G, BIT Hyderabad BS, SIGPLAN-M, Jan 2023 - current
   \item Alperen Keles, UMD PhD student, SIGPLAN-M, May 2022 - Jan 2023
   \item Adam Anderson, UW BS (March 2018 - Nov 2020)
@@ -338,6 +334,29 @@ Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh
 \end{enumerate}
 
 
+\section{Education}
+
+PhD in Computer Science, Fall 2015 - Summer 2021 \\
+Paul G. Allen School of Computer Science \& Engineering, UW \\
+Thesis topic: Programming Language Techniques for Computational Fabrication \\
+Advisors: Zachary Tatlock, Dan Grossman\\
+\textbf{Adobe Research Fellow, 2019} \\
+%\textbf{Work funded by NSF grant awards: 1813166, 174957} \\
+
+{\sl Master of Science,} Computer Science, June 2018 \\
+Paul G. Allen School of Computer Science \& Engineering, UW \\
+Advisors: Zachary Tatlock, Dan Grossman
+
+{\sl Master of Science,} Computer Science, August 2014 \\
+\'{E}cole Polytechnique F\'{e}d\'{e}rale de Lausanne(EPFL), Switzerland \\
+Thesis: Contracts for Real-Time, Safety Critical Systems \\Supervisors: Prof.Viktor Kuncak, Dr.Manuel Oriol\\
+\textbf{M.Sc Research Scholars Program and Swiss Government Fellow}
+
+{\sl Bachelor of Science,} Statistics, Mathematics and Computer Science, June 2012 \\
+Banaras Hindu University (BHU), Varanasi, India \\
+Concentration: Statistics \\
+Thesis: Social Network-based Analysis of Behavior \\ Supervisor: Prof. R.D Singh\\
+\textbf{University Gold Medalist for graduating with highest GPA}
 
 \section{Prior Work \\ Experience}
 {\sl Research Intern} \hfill June 2016 - August 2016 \\
