--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -88,7 +88,7 @@ Website: \url{https://cnandi.com/} \\
 \begin{enumerate}
 
   \item Enzo Nicourt, Ben Kushigian, \textbf{Chandrakana Nandi}, Ylies Falcone. \\
-    Towards Mutation-guided Test Suites for Smart Contracts, ICST (Industry Track), 2024.
+    Towards Mutation-guided Test Suites for Smart Contracts (Industry), ICST 2024.
 
   \item Anjali Pal, Brett Saiki, Cynthia Richey, Amy Zhu, Ryan Tjoa, Oliver Flatt, Max Willsey, Zachary Tatlock, \textbf{Chandrakana Nandi}. \\
     Equality Saturation Theory Exploration à la Carte, OOPSLA 2023.
