--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -80,12 +80,14 @@ Website: \url{https://cnandi.com/} \\
   \item Yihong Zhang, Anjali Pal, Adriana Schulz, Zachary Tatlock, \textbf{Chandrakana Nandi}.
     Using Anti-Unification to Scale Parametric CAD Decompilation.
 
-  \item John Toman, Shelly Grossman, Alexander Bakst, Mooly Sagiv, \textbf{Chandrakana Nandi}.
-    Pointer Analysis Guided Verification of Ethereum Bytecode.
 \end{enumerate}
 
 \subsection{Peer reviewed conference papers}
 \begin{enumerate}
+
+  \item Shelly Grossman, Alexander Bakst, Sameer Arora, John Toman, Mooly Sagiv, \textbf{Chandrakana Nandi}. \\
+    Practical Verification Of Smart Contracts Using Memory Splitting, OOPSLA 2024. \\
+
 
   \item Enzo Nicourt, Ben Kushigian, \textbf{Chandrakana Nandi}, Ylies Falcone. \\
     Towards Mutation-guided Test Suites for Smart Contracts (Industry), ICST 2024.
@@ -133,6 +135,9 @@ Website: \url{https://cnandi.com/} \\
 \subsection{Workshop and other peer-reviewed papers}
 
 \begin{enumerate}
+  \item Gus Henry Smith, Zachary D. Sisco, Thanawat Techaumnuaiwit, Jingtao Xia, Vishal Canumalla, Andrew Cheung, Zachary Tatlock, \textbf{Chandrakana Nandi}, Jonathan Balkind. \\  There and Back Again: A Netlist's Tale with Much Egraphin', LATTE 2024.
+  \item Valkyrie Savage, Nóra Püsök, Harrison Goldstein, \textbf{Chandrakana Nandi}, Jia Yi Ren, Lora Oehlberg. \\
+    Demonstrating FEDT: Supporting Characterization Experiments in Fabrication Research. SCF Demo 2024.
 \item \textbf{Chandrakana Nandi}, Dan Grossman, Adrian Sampson, Todd Mytkowicz, Kathryn S. McKinley. \\ Debugging Probabilistic Programs. MAPL 2017.
 \item \textbf{Chandrakana Nandi}, Dan Grossman, Adrian Sampson, Todd Mytkowicz, Kathryn S. McKinley. \\ Debugging Probabilistic Programs. PPS 2017.
 \item \textbf{Chandrakana Nandi}, Michael D. Ernst. \\ Automatic Trigger Generation for Rule-based Smart Homes. ACM SIGPLAN PLAS 2016.
@@ -249,6 +254,7 @@ Website: \url{https://cnandi.com/} \\
 
 \section{Talks}
  \begin{itemize}[itemsep=.7pt]
+ \item{\sl From Theory to Practice: Enhancing Formal Verification for Real-World Smart Contracts}, Invited Speaker, University of Utah, CS Colloquium, August 2024.
  \item{\sl Mutation Testing for Formal Verification}, Invited Speaker, Adobe PL Seminar, December 2023
  \item{\sl Mutation Testing for Formal Specifications}, Solidity Summit, Devconnect 2023
  \item{\sl Proactive Security}, TrustX, Devconnect 2023
