--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -135,6 +135,7 @@ Website: \url{https://cnandi.com/} \\
 \subsection{Workshop and other peer-reviewed papers}
 
 \begin{enumerate}
+  \item Gus Henry Smith, Colin Knizek, Daniel Petrisko, Zachary Tatlock, Jonathan Balkind, Gilbert Louis Bernstein, Haobin Ni, \textbf{Chandrakana Nandi}. \\ Scaling Program Synthesis Based Technology Mapping with Equality Saturation, WOSET 2024.
   \item Gus Henry Smith, Zachary D. Sisco, Thanawat Techaumnuaiwit, Jingtao Xia, Vishal Canumalla, Andrew Cheung, Zachary Tatlock, \textbf{Chandrakana Nandi}, Jonathan Balkind. \\  There and Back Again: A Netlist's Tale with Much Egraphin', LATTE 2024.
   \item Valkyrie Savage, Nóra Püsök, Harrison Goldstein, \textbf{Chandrakana Nandi}, Jia Yi Ren, Lora Oehlberg. \\
     Demonstrating FEDT: Supporting Characterization Experiments in Fabrication Research. SCF Demo 2024.
@@ -163,6 +164,8 @@ Website: \url{https://cnandi.com/} \\
 %following review committees are by invitation only. \\
 
 \begin{enumerate}[itemsep=-2pt]
+\item PLDI 2025 program committee (PC)
+\item WITS 2025 program committee (PC)
 \item PLDI 2024 program committee (PC)
 \item ASPLOS 2024 program committee (PC)
 \item TFP 2024 program committee (PC)
@@ -220,22 +223,18 @@ Website: \url{https://cnandi.com/} \\
 \item OOPSLA 2021 \textbf{Distinguished Paper Award}
 \item POPL 2021 \textbf{Distinguished Paper Award}
 \item Adobe Research Fellowship 2019
-\item CRA-W Grad Cohort Workshop 2016 invitee
-\item Scholarship and travel grant to attend SIGPLAN PLMW and POPL 2016
-\item Student Travel Grants from ACM CCS and PLAS 2016
-\item Swiss Government Fellow from September 2012-2014
+%\item CRA-W Grad Cohort Workshop 2016 invitee
+%\item Scholarship and travel grant to attend SIGPLAN PLMW and POPL 2016
+%\item Student Travel Grants from ACM CCS and PLAS 2016
+\item Swiss Government Fellow 2012-2014
   % (full fellowship during masters studies at EPFL)
-\item M.Sc Research Scholars Program under Prof. Joseph Sifakis, 2012
-\item University Gold Medal for having the highest GPA at the
-  Institute of Science, BHU, 2012
-\item Department Gold Medal for having the highest GPA in the Department of Statistics, BHU, 2012
+\item M.Sc Research Scholars Program with Prof. Joseph Sifakis, 2012
+\item University Gold Medal, Institute of Science, BHU, 2012
+\item Department Gold Medal, Department of Statistics, BHU, 2012
 \item Gargi Devi Deodhar Silver Medal, Institute of Science, BHU, 2012
-\item Manorama Gold Medal for having the highest GPA among all Female students at the
-  Institute of Science, BHU, 2012
-\item Dr. Basudeo Sahni Medal for highest GPA at the
-  Institute of Science, BHU, 2012
-\item University scholarship holder for academic excellence at the Institute of Science, BHU,
-  for 3 consecutive years.
+\item Manorama Gold Medal, Institute of Science, BHU, 2012
+\item Dr. Basudeo Sahni Medal, Institute of Science, BHU, 2012
+\item University scholarship, Institute of Science, BHU
 %\begin{itemize}\itemsep -2pt
 %\item University Gold Medal for having the highest GPA in the
 %  Institute of Science, BHU
@@ -249,11 +248,13 @@ Website: \url{https://cnandi.com/} \\
 %\item Cash award and university scholarship holder for academic excellence
 %  for 3 consecutive years
 %\end{itemize}
-\item Secured All India Rank 14 in the IIT-Joint Admission Test for Mathematical Statistics in 2012
+\item All India Rank 14 in the IIT-JAM (Statistics) in 2012
 \end{enumerate}
 
 \section{Talks}
  \begin{itemize}[itemsep=.7pt]
+ \item{\sl From Theory to Practice: Enhancing Formal Verification for Real-World Smart Contracts}, Invited Speaker, UCLA PL Day, October 2024.
+ \item{\sl Practical Verification of Smart Contracts Using Memory Splitting}, Conference Talk, OOPSLA, October 2024
  \item{\sl From Theory to Practice: Enhancing Formal Verification for Real-World Smart Contracts}, Invited Speaker, University of Utah, CS Colloquium, August 2024.
  \item{\sl Mutation Testing for Formal Verification}, Invited Speaker, Adobe PL Seminar, December 2023
  \item{\sl Mutation Testing for Formal Specifications}, Solidity Summit, Devconnect 2023
@@ -309,11 +310,13 @@ Website: \url{https://cnandi.com/} \\
 
 \section{Research Mentorship}
 \begin{enumerate}
-  \item William Wang, intern at Certora (Jan - March 2024)
   \item Anjali Pal, UW PhD Student
   \item Amy Zhu, UW PhD Student
-  \item Thia Richey, UW BS/MS
-  \item Brett Saiki, UW BS/MS
+  \item Thia Richey, UW BS/MS $\rightarrow$ UPenn PhD student
+     \begin{itemize}
+       \item $1^{st}$ place, ACM-ICFP SRC (undergraduate category), 2023
+     \end{itemize}
+  \item Brett Saiki, UW BS/MS $\rightarrow$ UW PhD student
   \item Ben Kushigian, intern at Certora (March - Sept 2023)
   \item Thia Richey, intern at Certora (June - Sept 2023)
   \item Oliver Flatt, intern at Certora (Jan - Aug 2022)
