--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -312,6 +312,7 @@ Website: \url{https://cnandi.com/} \\
 \begin{enumerate}
   \item Anjali Pal, UW PhD Student
   \item Amy Zhu, UW PhD Student
+  \item Nicole Heinimann, TU Berlin, SIGPLAN-M, June 2024 - current
   \item Thia Richey, UW BS/MS $\rightarrow$ UPenn PhD student
      \begin{itemize}
        \item $1^{st}$ place, ACM-ICFP SRC (undergraduate category), 2023
