--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -164,8 +164,14 @@ Website: \url{https://cnandi.com/} \\
 %following review committees are by invitation only. \\
 
 \begin{enumerate}[itemsep=-2pt]
+\item OOPSLA 2026 program committee (PC)
+\item TACO 2025 journal reviewer
+\item ASPLOS 2026 external review committee (ERC)
+\item ASPLOS 2025 external review committee (ERC)
 \item PLDI 2025 program committee (PC)
 \item WITS 2025 program committee (PC)
+\item TSE 2024 journal reviewer
+\item EGRAPHS 2024 review committee (PC)
 \item PLDI 2024 program committee (PC)
 \item ASPLOS 2024 program committee (PC)
 \item TFP 2024 program committee (PC)
@@ -219,6 +225,7 @@ Website: \url{https://cnandi.com/} \\
 
 \section{Awards}
 \begin{enumerate}[itemsep=.5pt]
+\item SIGPLAN Research Highlight 2025 for egg: Fast and Extensible EqSat
 \item Rising Stars in EECS Award, 2021
 \item OOPSLA 2021 \textbf{Distinguished Paper Award}
 \item POPL 2021 \textbf{Distinguished Paper Award}
@@ -312,6 +319,8 @@ Website: \url{https://cnandi.com/} \\
 \begin{enumerate}
   \item Anjali Pal, UW PhD Student
   \item Amy Zhu, UW PhD Student
+  \item Andrew Cheung, UCSD PhD Student
+  \item Yumeng He, Utah PhD student
   \item Nicole Heinimann, TU Berlin, SIGPLAN-M, June 2024 - current
   \item Thia Richey, UW BS/MS $\rightarrow$ UPenn PhD student
      \begin{itemize}
