--- a/docs/cv/chandrakana_CV.tex
+++ b/docs/cv/chandrakana_CV.tex
@@ -85,6 +85,12 @@ Website: \url{https://cnandi.com/} \\
 \subsection{Peer reviewed conference papers}
 \begin{enumerate}
 
+  \item Valkyrie Savage, Harrison Goldstein, Nora Pusok, Jia Yi Ren, Bhaskar Dutt, \textbf{Chandrakana Nandi}, Lora Oehlberg. \\
+    FEDT: Supporting Experiment Design and Execution in HCI Fabrication Research, UIST 2025. \\
+
+  \item Yumeng He, \textbf{Chandrakana Nandi}, Sreepathi Pai. \\
+    Formalizing Linear Motion G-code for Invariant Checking and Differential Testing of Fabrication Tools, OOPSLA 2025. \\
+
   \item Shelly Grossman, Alexander Bakst, Sameer Arora, John Toman, Mooly Sagiv, \textbf{Chandrakana Nandi}. \\
     Practical Verification Of Smart Contracts Using Memory Splitting, OOPSLA 2024. \\
 
@@ -225,6 +231,7 @@ Website: \url{https://cnandi.com/} \\
 
 \section{Awards}
 \begin{enumerate}[itemsep=.5pt]
+\item CACM Research Highlight 2025 for egg: Fast and Extensible EqSat
 \item SIGPLAN Research Highlight 2025 for egg: Fast and Extensible EqSat
 \item Rising Stars in EECS Award, 2021
 \item OOPSLA 2021 \textbf{Distinguished Paper Award}
